[workspace]
members = [
	"src/tesys/astrometry",
	"src/tesys/loggable_derive"
]

[package]
name = "tesys-rs"
version = "0.1.0"
authors = ["Sam Morrell <samuelmorrell@gmail.com>"]

[dependencies]
tesys_astrometry = { path = "src/tesys/astrometry"}
tesys_loggable_derive = { path = "src/tesys/loggable_derive"}
lazy_static = "1.1.0"
