[workspace]
members = [
	"tesys/",
	"plugins/example",
]

[package]
name = "tesys-rs"
version = "0.1.0"
authors = ["Sam Morrell <samuelmorrell@gmail.com>"]
edition = "2018"

[dependencies]
tesys = { path = "tesys/"}
tesys_astrometry = { path = "tesys/src/astrometry"}
tesys_derive = { path = "tesys/src/tesys_derive"}
lazy_static = "1.1.0"
colored = "1.6.1"
libloading = "0.5.0"
chrono = "*"