[package]
name = "tesys"
version = "0.1.0"
authors = ["Sam Morrell <samuelmorrell@gmail.com>"]

[lib]
name = "tesys"
path = "./src/lib.rs"
version = "0.1.0"

[dependencies]
tesys_astrometry = { path = "src/astrometry"}
tesys_derive = { path = "src/tesys_derive"}
lazy_static = "1.1.0"
colored = "1.6.1"
libloading = "0.5.0"
error-chain = "*"
