[package]
name = "tesys"
version = "0.1.0"
authors = ["Sam Morrell <samuelmorrell@gmail.com>"]
edition = "2018"

[lib]
name = "tesys"
path = "./src/lib.rs"

[dependencies]
tesys_astrometry = { path = "src/astrometry"}
tesys_derive = { path = "src/tesys_derive"}
lazy_static = "1.1.0"
colored = "1.6.1"
libloading = "0.5.0"
error-chain = "*"
slotmap = "0.3.0"
uuid = { version="~0.7", features = ["v4"] }
chrono = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"