[package]
name = "tesys_example_plugin"
version = "0.0.1"
authors = ["Sam Morrell <samuelmorrell@gmail.com>"]

[lib]
name = "tesys_example_plugin"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
tesys = { path = "../../tesys/"}
tesys_derive = { path = "../../tesys/src/tesys_derive"}
uuid = { version="~0.7", features = ["v4"] }